plugins {
    id 'java-gradle-plugin'
    id 'maven-publish'
    id 'groovy'
    id 'base'
    //id 'java-library'
}

dependencies {
    //gradle sdk
    implementation gradleApi()
    //groovy sdk
    implementation localGroovy()

    implementation 'commons-io:commons-io:2.6'
    implementation 'commons-codec:commons-codec:1.11'

    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
//    implementation 'com.aliyun:dingtalk:1.4.82'
}

sourceSets {
    main {
        groovy.srcDirs 'src/main/groovy'
        java.srcDirs 'src/main/java'
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}
//  发布区域

//定义Maven仓库信息
def MAVEN_GROOVY_GROUP_ID = 'cn.andzhang.groovy'
def MAVEN_GROOVY_ARTIFACT_ID = 'groovy-plugin'
def MAVEN_GROOVY_VERSION = "1.0.0-alpha-01"

def MAVEN_ANDROID_GROUP_ID = 'cn.andzhang.android'
def MAVEN_ANDROID_ARTIFACT_ID = 'upload-apk-plugin'
def MAVEN_ANDROID_VERSION = "1.0.0-alpha-01"

def MAVEN_USERNAME = 'zhangshuai'
def MAVEN_PASSWORD = 'zhangshuai'

gradlePlugin {
    plugins {
        groovys {
            id = MAVEN_GROOVY_ARTIFACT_ID
            implementationClass = 'cn.andzhang.groovy.MyGroovyPlugin'
        }
        androids {
            id = MAVEN_ANDROID_ARTIFACT_ID
            implementationClass = 'cn.andzhang.android.MyAndroidPlugin'
        }
    }
}

publishing {
    publications {
        groovy(MavenPublication) {
            groupId = MAVEN_GROOVY_GROUP_ID
            artifactId = MAVEN_GROOVY_ARTIFACT_ID
            version = MAVEN_GROOVY_VERSION
            from components.java

            pom {
                name = "ZsPlugin"
                description = "A demonstration of Maven POM customization"
                url = "https://github.com/TooCareAboutYOU/UplaodApk-Plugin"
                inceptionYear = '2022/11/25'
                licenses {
                    license {
                        name = "The Apache License, Version 2.0"
                        url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
                    }
                }
                developers {
                    developer {
                        id = "zs"
                        name = "zhagnshuai"
                        email = "1175133706@qq.com"
                        organization = '上海双深技术有限公司'
                    }
                }
            }
        }

        android(MavenPublication) {
            groupId = MAVEN_ANDROID_GROUP_ID
            artifactId = MAVEN_ANDROID_ARTIFACT_ID
            version = MAVEN_ANDROID_VERSION
            from components.java

            pom {
                name = "ZsPlugin"
                description = "AndroidStudio打包APK后自动化上传到FirIm或蒲公英发布平台，并发送消息到钉钉群或飞书群"
                url = "https://github.com/TooCareAboutYOU/UplaodApk-Plugin"
                inceptionYear = '2022/11/25'
                licenses {
                    license {
                        name = "The Apache License, Version 2.0"
                        url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
                    }
                }
                developers {
                    developer {
                        id = "zs"
                        name = "zhagnshuai"
                        email = "1175133706@qq.com"
                        organization = '上海双深技术有限公司'
                    }
                }
            }
        }
    }

    repositories {
        //默认路径：.m2/repository
//        mavenLocal()
        maven {
//            allowInsecureProtocol true
//                name = MAVEN_NAME //可选
//            credentials {
//                username = MAVEN_USERNAME
//                password = MAVEN_PASSWORD
//            }
            //自定义路径：CustomProjectPlugin/build/repo
            url = layout.projectDirectory.dir('repo')
//            url = uri('../repo')
        }
    }
}